<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/pair_entry"
        android:title="@string/pair_entry" />

    <item
        android:id="@+id/pair_entry_cancel"
        android:title="@string/pair_entry_cancel"
        />

    <item
        android:id="@+id/entry_decrement"
        android:title="@string/entry_decrement"
        />
    <item
        android:id="@+id/entry_increment"
        android:title="@string/entry_increment"
        />

    <item
        android:id="@+id/entry_definitely"
        android:title="@string/entry_definitely"
        />

    <item
        android:id="@+id/entry_definitely_cancel"
        android:title="@string/entry_definitely_cancel"
        />

    <item
        android:id="@+id/entry_break"
        android:title="@string/entry_break"
        />

    <item
        android:id="@+id/entry_break_cancel"
        android:title="@string/entry_break_cancel"
        />


</menu>
